# watercrawl-ollama

./: CHANGELOG.md  README.md  pyproject.toml
src/watercrawl_ollama/: __init__.py  plugins.py  settings.py
